# super-job-apply

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  setup.sh
src/super_job_apply/: __init__.py  ats_detection.py  audit.py  cli.py  config.py  db.py  models.py  pipeline.py
src/super_job_apply/analysis/: scorer.py
src/super_job_apply/applicator/: ats_fillers.py  browser.py  email_verifier.py  form_cache.py  submit_handlers.py  uploader.py
src/super_job_apply/discovery/: base.py  career_pages.py  domain_whitelist.py  exa_company.py  exa_jobs.py  greenhouse_lever.py  linkedin_brightdata.py  url_resolver.py
src/super_job_apply/reporting/: stats.py
src/super_job_apply/tailoring/: cover_letter.py  resume.py
src/super_job_apply/writers/: editor.py  mediator.py  pipeline.py  writer.py
